--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "debug": "~2.6.9",
     "dotenv-flow": "^3.2.0",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "mongoose": "^5.9.25",
+    "morgan": "~1.9.1",
+    "pluralize": "^8.0.0"
   },
   "devDependencies": {
     "eslint": "^5.3.0",
