--- a/.eslintrc
+++ b/.eslintrc
@@ -22,7 +22,8 @@
       "radix": ["warn", "as-needed"],
       "no-plusplus": "off",
       "object-curly-newline": ["error", { "ObjectPattern": { "multiline": true } }],
-      "no-param-reassign": ["error", { "props": false }]
+      "no-param-reassign": ["error", { "props": false }],
+      "class-methods-use-this": 0
     },
     "env": {
       "jest": true
