--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.6.9",
     "dotenv-flow": "^3.2.0",
     "express": "~4.16.1",
+    "helmet": "^3.23.3",
     "lodash": "^4.17.19",
     "mongoose": "^5.9.25",
     "morgan": "~1.9.1",
