--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lodash": "^4.17.19",
     "mongoose": "^5.9.25",
     "morgan": "~1.9.1",
-    "pluralize": "^8.0.0"
+    "pluralize": "^8.0.0",
+    "redis": "^3.0.2"
   },
   "devDependencies": {
     "eslint": "^5.3.0",
