--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mongoose": "^5.9.25",
     "morgan": "~1.9.1",
     "pluralize": "^8.0.0",
-    "redis": "^3.0.2"
+    "redis": "^3.0.2",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "eslint": "^5.3.0",
