--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint --ignore-path .gitignore ."
   },
   "dependencies": {
+    "aws-sdk": "^2.834.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -17,6 +18,7 @@
     "lodash": "^4.17.19",
     "mongoose": "^5.9.25",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.4.17",
     "pluralize": "^8.0.0",
     "redis": "^3.0.2",
     "winston": "^3.3.3"
