--- a/package.json
+++ b/package.json
@@ -1,39 +1,23 @@
 {
-  "name": "microservice-base",
-  "version": "0.0.0",
-  "private": true,
+  "name": "ts-express",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "node index",
-    "dev": "nodemon index",
-    "lint": "eslint --ignore-path .gitignore ."
+    "build": "npx tsc",
+    "start": "node dist/index.js",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.834.0",
-    "cookie-parser": "~1.4.4",
-    "cors": "^2.8.5",
-    "debug": "~2.6.9",
-    "dotenv-flow": "^3.2.0",
-    "express": "~4.16.1",
-    "helmet": "^3.23.3",
-    "lodash": "^4.17.19",
-    "mongoose": "^5.12.7",
-    "morgan": "~1.9.1",
-    "nodemailer": "^6.4.17",
-    "pluralize": "^8.0.0",
-    "redis": "^3.1.1",
-    "winston": "^3.3.3"
-  },
-  "devDependencies": {
-    "eslint": "^5.3.0",
-    "eslint-config-airbnb-base": "^13.2.0",
-    "eslint-plugin-import": "^2.16.0",
-    "husky": "^1.3.1",
-    "lint-diff": "^1.2.1",
-    "nodemon": "^1.19.1"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-diff"
-    }
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.6.3",
+    "concurrently": "^7.3.0",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "nodemon": "^2.0.19",
+    "typescript": "^4.7.4"
   }
 }
